[project]
name = "comfyui-neuralbooru"
description = "Turn natural language into validated Danbooru tags using a local LLM"
version = "1.1.0"
license = {file = "LICENSE"}
dependencies = []

[project.urls]
Repository = "https://github.com/ChrisJohnson89/ComfyUI-NeuralBooru"

[tool.comfy]
PublisherId = "chrisjohnson"
DisplayName = "NeuralBooru"
Icon = ""
Tags = ["anime", "llm", "prompt", "booru", "lm-studio", "local-ai"]
